# mcp_ext-apps

./: .gitignore  .prettierignore  AGENTS.md  README.md  RELEASES.md  SEP.md  agent-skills.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  typedoc.config.mjs
api/: hierarchy.html  index.html  modules.html
docs/: migrate_from_openai_apps.md  patterns.md  patterns.tsx  quickstart.md  testing-mcp-apps.md
examples/: run-all.ts  servers.json
examples/adk-analytics-server/: .gitignore  README.md  package.json  pyproject.toml  server.py
examples/adk-analytics-server/adk_analytics_server/: __init__.py  __main__.py  agent.py  agent_server.py  data.py  indicators.py  logging.py  mcp_client.py  server.py
examples/adk-analytics-server/adk_analytics_server/llm/: __init__.py  anthropic.py  factory.py
examples/adk-analytics-server/adk_analytics_server/static/: agent_ui.html  view.html
examples/generic-agent-host/: README.md  index.html  package.json  pyproject.toml  vite.config.ts
examples/generic-agent-host/agent/: __init__.py  __main__.py  agent.py  agent_server.py  mcp_client.py
examples/generic-agent-host/agent/llm/: base.py  openrouter.py
examples/generic-agent-host/agent/static/: index.html
examples/generic-agent-host/agent/static/assets/: index-BzZ60CgA.css  index-CzOn7Hpx.js  index-Dl_xurXG.js
examples/generic-agent-host/src/: main.tsx  styles.css
kotlin/: .gitignore
scripts/: generate-kotlin-types.ts  generate-swift-types.ts  migrate-server-examples.ts  preflight.mjs  typedoc-plugin-fix-mermaid-entities.mjs
(+417 files in other folders)
