[project]
name = "generic-agent-host"
version = "0.1.0"
description = "Generic LLM agent host with MCP Apps bridge support"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.46.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
google = ["google-genai>=1.0.0"]
